--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -31,6 +31,11 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+      - name: Inject password hash
+        run: |
+          if [ -n "${{ secrets.SITE_PASSWORD_HASH }}" ]; then
+            sed -i "s|{{PASSWORD_HASH}}|${{ secrets.SITE_PASSWORD_HASH }}|g" index.html
+          fi
       - name: Setup Pages
         uses: actions/configure-pages@v5
       - name: Upload artifact
